compatible with socket.io-client 1.0.6